Rollback to Java 11 due to arrow key events issue
- In Java 8, arrow key events do not affect the target program only.